--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <title>ВЕБ-Студия</title>
+    <title>Портфолио</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="nav-header">
       <div class="header-box container">
         <a class="logo-link link" href="./index.html">
           <span lang="en" class="logo-web">Web</span>
@@ -39,10 +39,19 @@
         </nav>
         <ul class="list-contacts list">
           <li class="contacts-item">
-            <a class="contacts-item-link link" href="info@devstudio.com">info@devstudio.com</a>
+            <a class="contacts-item-link link" href="info@devstudio.com">
+              <svg class="svg-icon-envelope" width="16" height="10">
+                <use href="./images/svg/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a>
           </li>
           <li class="contacts-item">
-            <a class="contacts-item-link link" href="+380961111111">+38 096 111 11 11</a>
+            <a class="contacts-item-link link" href="+380961111111">
+              <svg class="svg-icon-phone" width="12" height="16">
+                <use href="./images/svg/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -62,24 +71,44 @@
           <h2 class="qualities-title">Наші особливості</h2>
           <ul class="qualities-list list">
             <li>
+               <div class="background-svg-icon">
+                <svg class="svg-icon-satellite" width="70" height="70">
+                  <use href="./images/svg/icons.svg#icon-satellite"></use>
+                </svg>
+              </div>
               <h3 class="qualities-list-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="qualities-list-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li>
+               <div class="background-svg-icon">
+                <svg class="svg-icon-satellite" width="70" height="70">
+                  <use href="./images/svg/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="qualities-list-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="qualities-list-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li>
+               <div class="background-svg-icon">
+                <svg class="svg-icon-satellite" width="70" height="70">
+                  <use href="./images/svg/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="qualities-list-title">ПЛАНУВАННЯ</h3>
               <p class="qualities-list-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li>
+               <div class="background-svg-icon">
+                <svg class="svg-icon-satellite" width="70" height="70">
+                  <use href="./images/svg/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="qualities-list-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="qualities-list-text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -123,8 +152,29 @@
               <div class="team-text-box">
                 <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p>
-                  <span lang="en" class="team-position">Product Designer</span>
-                </p>
+                  <span lang="en" class="team-position">Product Designer</span></p>
+                  <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a href="https://www.instagram.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                      ><svg class="team-soc-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-instagram"></use></svg></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="https://twitter.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                      ><svg class="team-soc-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-twitter"></use></svg></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="https://facebook.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                      ><svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/svg/icons.svg#icon-facebook"></use></svg></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="https://www.linkedin.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                      ><svg class="team-soc-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-linkedin"></use></svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-style">
@@ -138,6 +188,28 @@
                 <h3 class="team-name">Ольга Рєпіна</h3>
 
                 <p lang="en" class="team-position">Frontend Developer</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a href="https://www.instagram.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                      ><svg class="team-soc-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-instagram"></use></svg></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="https://twitter.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                      ><svg class="team-soc-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-twitter"></use></svg></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="https://facebook.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                      ><svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/svg/icons.svg#icon-facebook"></use></svg></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="https://www.linkedin.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                      ><svg class="team-soc-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-linkedin"></use></svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-style">
@@ -151,6 +223,28 @@
                 <h3 class="team-name">Микола Тарасов</h3>
 
                 <p lang="en" class="team-position">Marketing</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a href="https://www.instagram.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                      ><svg class="team-soc-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-instagram"></use></svg></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="https://twitter.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                      ><svg class="team-soc-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-twitter"></use></svg></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="https://facebook.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                      ><svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/svg/icons.svg#icon-facebook"></use></svg></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="https://www.linkedin.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                      ><svg class="team-soc-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-linkedin"></use></svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-style">
@@ -162,9 +256,87 @@
               />
               <div class="team-text-box">
                 <h3 class="team-name">Михайло Єрмаков</h3>
-
                 <p lang="en" class="team-position">UI Designer</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a href="https://www.instagram.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link">
+                      <svg class="team-soc-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="https://twitter.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link">
+                      <svg class="team-soc-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="https://facebook.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link">
+                      <svg class="team-soc-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="https://www.linkedin.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link">
+                      <svg class="team-soc-icon" width="20" height="20">
+                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+            <section class="section-clients section">
+        <div class="container">
+          <h2 class="title-clients">Постійні клієнти</h2>
+          <ul class="clients-list list">
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/svg/icons.svg#icon-company-a"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/svg/icons.svg#icon-company-b"></use>
+              </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/svg/icons.svg#icon-company-c"></use>
+                </svg>
+              </a> 
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/svg/icons.svg#icon-company-d"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/svg/icons.svg#icon-company-e"></use>
+                </svg>
+              </a>  
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/svg/icons.svg#icon-company-f"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -172,6 +344,7 @@
     </main>
     <footer class="footer">
       <div class="footer-box container">
+      <div>
         <a class="footer-link link" href="./index.html">
           <span lang="en" class="footer-web">Web</span>
           <span lang="en" class="footer-studio">Studio</span>
@@ -184,6 +357,41 @@
           </ul>
         </address>
       </div>
+          <div class="footer-icon-box">
+          <span class="footer-title">приєднуйтесь</span>
+          <ul class="footer-list-icon list">
+            <li class="footer-icon-item">
+              <a href="https://www.instagram.com/" target="_blank" rel= "nofollow noopener" class="footer-icon-link link">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/svg/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="https://twitter.com/" target="_blank" rel= "nofollow noopener" class="footer-icon-link link">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/svg/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="https://facebook.com/" target="_blank" rel= "nofollow noopener" class="footer-icon-link link">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/svg/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="https://www.linkedin.com/" target="_blank" rel= "nofollow noopener" class="footer-icon-link link">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
     </footer>
   </body>
 </html>
