--- a/portfolio.html
+++ b/portfolio.html
@@ -39,10 +39,20 @@
         </nav>
         <ul class="list-contacts list">
           <li class="contacts-item">
-            <a class="contacts-item-link link" href="info@devstudio.com">info@devstudio.com</a>
+            <a class="contacts-item-link link" href="info@devstudio.com">
+              <svg class="svg-icon-envelope" width="16" height="10">
+                <use href="./images/svg/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="contacts-item">
-            <a class="contacts-item-link link" href="+380961111111">+38 096 111 11 11</a>
+            <a class="contacts-item-link link" href="+380961111111">
+              <svg class="svg-icon-phone" width="12" height="16">
+                <use href="./images/svg/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -68,7 +78,7 @@
               <button type="button" class="filter-btn">Маркетинг</button>
             </li>
           </ul>
-                    <ul class="gallery-list list">
+          <ul class="gallery-list list">
             <li class="gallery-item">
               <img
                 class="gallery-img"
@@ -158,9 +168,7 @@
                 height="294"
               />
               <div class="gallery-text-box">
-                <h2 class="gallery-project-title">
-                 Видання<span lang="en">Limited Edition</span>
-                </h2>
+                <h2 class="gallery-project-title">Видання<span lang="en">Limited Edition</span></h2>
                 <p class="gallery-project-text">Дизайн</p>
               </div>
             </li>
@@ -192,22 +200,85 @@
             </li>
           </ul>
         </div>
-
       </section>
     </main>
-      <footer class="footer">
-      <div class="container">
-        <a class="footer-link link" href="./index.html">
-          <span lang="en" class="footer-web">Web</span>
-          <span lang="en" class="footer-studio">Studio</span>
-        </a>
-        <address class="footer-main">
-          <ul class="footer-list list">
-            <li class="footer-address"><a href="https://goo.gl/maps/tJLbzxb6EKG3bFai7" rel="noopener noreferrer nofollow" class="footer-address link" >м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a class="footer-mail link" href="meilto:info@example.com">info@example.com</a></li>
-            <li><a class="footer-tel link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+    <footer class="footer">
+      <div class="footer-box container">
+        <div>
+          <a class="footer-link link" href="./index.html">
+            <span lang="en" class="footer-web">Web</span>
+            <span lang="en" class="footer-studio">Studio</span>
+          </a>
+          <address class="footer-main">
+            <ul class="footer-list list">
+              <li class="footer-address">
+                <a
+                  href="https://goo.gl/maps/tJLbzxb6EKG3bFai7"
+                  rel="noopener noreferrer nofollow"
+                  class="footer-address link"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li>
+                <a class="footer-mail link" href="meilto:info@example.com">info@example.com</a>
+              </li>
+              <li><a class="footer-tel link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-icon-box">
+          <span class="footer-title">приєднуйтесь</span>
+          <ul class="footer-list-icon list">
+            <li class="footer-icon-item">
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                rel="nofollow noopener"
+                class="footer-icon-link link"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/svg/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a
+                href="https://twitter.com/"
+                target="_blank"
+                rel="nofollow noopener"
+                class="footer-icon-link link"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/svg/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a
+                href="https://facebook.com/"
+                target="_blank"
+                rel="nofollow noopener"
+                class="footer-icon-link link"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/svg/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a
+                href="https://www.linkedin.com/"
+                target="_blank"
+                rel="nofollow noopener"
+                class="footer-icon-link link"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
