--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,8 @@
           </ul>
           <ul class="gallery-list list">
             <li class="gallery-item">
-              <img
+              <a href="" class="gallery-link link">
+                <img
                 class="gallery-img"
                 src="./images/project_img_1.jpg"
                 alt="Технокряк"
@@ -90,10 +91,12 @@
               <div class="gallery-text-box">
                 <h2 class="gallery-project-title">Технокряк</h2>
                 <p class="gallery-project-text">Веб-сайт</p>
+              </a>
               </div>
             </li>
             <li class="gallery-item">
-              <img
+              <a href="" class="gallery-link link">
+                <img
                 class="gallery-img"
                 src="./images/project_img_2.jpg"
                 alt="Orlean vs Golden Star"
@@ -105,9 +108,11 @@
                   Постер <span lang="en">Orlean vs Golden Star</span>
                 </h2>
                 <p class="gallery-project-text">Дизайн</p>
+                 </a> 
               </div>
             </li>
             <li class="gallery-item">
+              <a href="" class="gallery-link link">
               <img
                 class="gallery-img"
                 src="./images/project_img_3.jpg"
@@ -118,9 +123,11 @@
               <div class="gallery-text-box">
                 <h2 class="gallery-project-title">Ресторан <span lang="en">Seafood</span></h2>
                 <p class="gallery-project-text">Додатки</p>
+             </a>
               </div>
             </li>
             <li class="gallery-item">
+              <a href="" class="gallery-link link">
               <img
                 class="gallery-img"
                 src="./images/project_img_4.jpg"
@@ -131,9 +138,11 @@
               <div class="gallery-text-box">
                 <h2 class="gallery-project-title">Проєкт <span lang="en">Prime</span></h2>
                 <p class="gallery-project-text">Маркетинг</p>
+             </a>
               </div>
             </li>
             <li class="gallery-item">
+              <a href="" class="gallery-link link">
               <img
                 class="gallery-img"
                 src="./images/project_img_5.jpg"
@@ -144,9 +153,11 @@
               <div class="gallery-text-box">
                 <h2 class="gallery-project-title">Проєкт<span lang="en">Boxes</span></h2>
                 <p class="gallery-project-text">Додаток</p>
+              </a>
               </div>
             </li>
             <li class="gallery-item">
+              <a href="" class="gallery-link link">
               <img
                 class="gallery-img"
                 src="./images/project_img_6.jpg"
@@ -157,9 +168,11 @@
               <div class="gallery-text-box">
                 <h2 class="gallery-project-title" lang="en">Inspiration has no Borders</h2>
                 <p class="gallery-project-text">Веб-сайт</p>
+              </a>
               </div>
             </li>
             <li class="gallery-item">
+              <a href="" class="gallery-link link">
               <img
                 class="gallery-img"
                 src="./images/project_img_7.jpg"
@@ -170,9 +183,11 @@
               <div class="gallery-text-box">
                 <h2 class="gallery-project-title">Видання<span lang="en">Limited Edition</span></h2>
                 <p class="gallery-project-text">Дизайн</p>
+              </a>
               </div>
             </li>
             <li class="gallery-item">
+              <a href="" class="gallery-link link">
               <img
                 class="gallery-img"
                 src="./images/project_img_8.jpg"
@@ -183,9 +198,11 @@
               <div class="gallery-text-box">
                 <h2 class="gallery-project-title">Проєкт<span lang="en">LAB</span></h2>
                 <p class="gallery-project-text">Маркетинг</p>
+              </a>
               </div>
             </li>
             <li class="gallery-item">
+              <a href="" class="gallery-link link">
               <img
                 class="gallery-img"
                 src="./images/project_img_9.jpg"
@@ -196,6 +213,7 @@
               <div class="gallery-text-box">
                 <h2 class="gallery-project-title" lang="en">Growing Business</h2>
                 <p class="gallery-project-text">Додаток</p>
+                </a>
               </div>
             </li>
           </ul>
@@ -257,7 +275,6 @@
               <a
                 href="https://facebook.com/"
                 target="_blank"
-                rel="nofollow noopener"
                 class="footer-icon-link link"
               >
                 <svg class="footer-icon" width="20" height="20">
@@ -269,7 +286,6 @@
               <a
                 href="https://www.linkedin.com/"
                 target="_blank"
-                rel="nofollow noopener"
                 class="footer-icon-link link"
               >
                 <svg class="footer-icon" width="20" height="20">
