--- a/index.html
+++ b/index.html
@@ -225,22 +225,22 @@
                 <p lang="en" class="team-position">Marketing</p>
                 <ul class="team-soc-list list">
                   <li class="team-soc-item">
-                    <a href="https://www.instagram.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                    <a href="https://www.instagram.com/" target="_blank" class="team-soc-link link"
                       ><svg class="team-soc-icon" width="20" height="20">
                         <use href="./images/svg/icons.svg#icon-instagram"></use></svg></a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="https://twitter.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                    <a href="https://twitter.com/" target="_blank" class="team-soc-link link"
                       ><svg class="team-soc-icon" width="20" height="20">
                         <use href="./images/svg/icons.svg#icon-twitter"></use></svg></a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="https://facebook.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                    <a href="https://facebook.com/" target="_blank" class="team-soc-link link"
                       ><svg class="team-soc-icon" width="20" height="20">
                       <use href="./images/svg/icons.svg#icon-facebook"></use></svg></a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="https://www.linkedin.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link"
+                    <a href="https://www.linkedin.com/" target="_blank" class="team-soc-link link"
                       ><svg class="team-soc-icon" width="20" height="20">
                         <use href="./images/svg/icons.svg#icon-linkedin"></use></svg></a>
                   </li>
@@ -259,28 +259,28 @@
                 <p lang="en" class="team-position">UI Designer</p>
                 <ul class="team-soc-list list">
                   <li class="team-soc-item">
-                    <a href="https://www.instagram.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link">
+                    <a href="https://www.instagram.com/" target="_blank" class="team-soc-link link">
                       <svg class="team-soc-icon" width="20" height="20">
                         <use href="./images/svg/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="https://twitter.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link">
+                    <a href="https://twitter.com/" target="_blank" class="team-soc-link link">
                       <svg class="team-soc-icon" width="20" height="20">
                         <use href="./images/svg/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="https://facebook.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link">
+                    <a href="https://facebook.com/" target="_blank" class="team-soc-link link">
                       <svg class="team-soc-icon" width="20" height="20">
                         <use href="./images/svg/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="https://www.linkedin.com/" target="_blank" rel= "nofollow noopener" class="team-soc-link link">
+                    <a href="https://www.linkedin.com/" target="_blank" class="team-soc-link link">
                       <svg class="team-soc-icon" width="20" height="20">
                         <use href="./images/svg/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -292,7 +292,7 @@
           </ul>
         </div>
       </section>
-            <section class="section-clients section">
+        <section class="section-clients section">
         <div class="container">
           <h2 class="title-clients">Постійні клієнти</h2>
           <ul class="clients-list list">
@@ -361,28 +361,28 @@
           <span class="footer-title">приєднуйтесь</span>
           <ul class="footer-list-icon list">
             <li class="footer-icon-item">
-              <a href="https://www.instagram.com/" target="_blank" rel= "nofollow noopener" class="footer-icon-link link">
+              <a href="https://www.instagram.com/" target="_blank" class="footer-icon-link link">
                 <svg class="footer-icon" width="20" height="20">
                   <use href="./images/svg/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icon-item">
-              <a href="https://twitter.com/" target="_blank" rel= "nofollow noopener" class="footer-icon-link link">
+              <a href="https://twitter.com/" target="_blank" class="footer-icon-link link">
                 <svg class="footer-icon" width="20" height="20">
                   <use href="./images/svg/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icon-item">
-              <a href="https://facebook.com/" target="_blank" rel= "nofollow noopener" class="footer-icon-link link">
+              <a href="https://facebook.com/" target="_blank" class="footer-icon-link link">
                 <svg class="footer-icon" width="20" height="20">
                   <use href="./images/svg/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icon-item">
-              <a href="https://www.linkedin.com/" target="_blank" rel= "nofollow noopener" class="footer-icon-link link">
+              <a href="https://www.linkedin.com/" target="_blank" class="footer-icon-link link">
                 <svg class="footer-icon" width="20" height="20">
                   <use href="./images/svg/icons.svg#icon-linkedin"></use>
                 </svg>
