--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
         <ul class="list-contacts list">
           <li class="contacts-item">
             <a class="contacts-item-link link" href="info@devstudio.com">
-              <svg class="svg-icon-envelope" width="16" height="10">
+              <svg class="svg-icon-envelope" width="16" height="12">
                 <use href="./images/svg/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -80,7 +80,7 @@
           </ul>
           <ul class="gallery-list list">
             <li class="gallery-item">
-              <a href="" class="gallery-link link">
+              <a href="" class="link">
                 <img
                 class="gallery-img"
                 src="./images/project_img_1.jpg"
@@ -95,7 +95,7 @@
               </div>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery-link link">
+              <a href="" class="link">
                 <img
                 class="gallery-img"
                 src="./images/project_img_2.jpg"
@@ -112,7 +112,7 @@
               </div>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery-link link">
+              <a href="" class="link">
               <img
                 class="gallery-img"
                 src="./images/project_img_3.jpg"
@@ -127,7 +127,7 @@
               </div>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery-link link">
+              <a href="" class="link">
               <img
                 class="gallery-img"
                 src="./images/project_img_4.jpg"
@@ -142,7 +142,7 @@
               </div>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery-link link">
+              <a href="" class="link">
               <img
                 class="gallery-img"
                 src="./images/project_img_5.jpg"
@@ -157,7 +157,7 @@
               </div>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery-link link">
+              <a href="" class="link">
               <img
                 class="gallery-img"
                 src="./images/project_img_6.jpg"
@@ -172,7 +172,7 @@
               </div>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery-link link">
+              <a href="" class="link">
               <img
                 class="gallery-img"
                 src="./images/project_img_7.jpg"
@@ -187,7 +187,7 @@
               </div>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery-link link">
+              <a href="" class="link">
               <img
                 class="gallery-img"
                 src="./images/project_img_8.jpg"
@@ -202,7 +202,7 @@
               </div>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery-link link">
+              <a href="" class="link">
               <img
                 class="gallery-img"
                 src="./images/project_img_9.jpg"
